add projects section and style about

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,6 +1,6 @@
 .parallax {
     /* The image used */
-    background-image: url('../../../public/images/splash2.jpg');
+    background-image: url('../../../public/images/computer.jpg');
 
     /* Set a specific height */
     min-height: 400px;
