--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,3 +1,9 @@
+/*Get rid of margins on smaller screen for containers*/
+.ui.fluid.container {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
+
 .ui.inverted.button:hover {
   color: #E14658;
 }
