--- a/src/components/Main/style.css
+++ b/src/components/Main/style.css
@@ -41,12 +41,22 @@ a:hover
 
 .ui.nav-dark.menu {
   background: #22252C;
+  border: none !important;
+}
+
+.ui.nav-dark-fade.menu {
+  background: #22252C;
   transition:top 0.5s ease;
   -webkit-transition: background 0.5s; /* Safari */
   transition: background 0.5s;
+  border: none !important;
 }
 
 .ui.nav-white.menu {
+  background: white;
+}
+
+.ui.nav-white-fade.menu {
   transition:top 0.5s ease;
   -webkit-transition: background 0.5s; /* Safari */
   transition: background 0.5s;
