--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -9,6 +9,14 @@
 }
 
 .ui.inverted.button {
-  box-shadow: 0 0 0 2px #E14658 inset !important;
+  box-shadow: 0 0 0 2px white inset !important;
+  color: white;
+}
+
+.ui.inverted.button.navy-button:hover {
   color: #E14658;
+}
+
+.ui.inverted.button.navy-button {
+  color: #22252C;
 }
