--- a/src/components/Blog/style.css
+++ b/src/components/Blog/style.css
@@ -44,12 +44,13 @@ h1 > .content {
 
 /*Image Style*/
 .image-style {
+  padding-top: 45px;
   max-height: 500px;
   box-shadow: 1px 1px 5px #d3d3d3;
 }
 
 .image-style-preview {
-  max-height: 200px;
+  max-height: 250px;
   box-shadow: 1px 1px 5px #d3d3d3;
 }
 
