--- a/src/components/Blog/style.css
+++ b/src/components/Blog/style.css
@@ -44,7 +44,8 @@ h1 > .content {
 
 /*Image Style*/
 .image-style {
-  padding-top: 45px;
+  margin-top: 45px;
+  margin-bottom: 45px;
   max-height: 500px;
   box-shadow: 1px 1px 5px #d3d3d3;
 }
